Updating Spring Boot Server!