@@ -10,6 +10,8 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -19,6 +21,8 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import sun.misc.Signal;
+import sun.misc.SignalHandler;
 
 @SpringBootApplication
 @RestController
@@ -29,22 +33,36 @@ public class SpringBootInterface {
         SpringApplication app = new SpringApplication(SpringBootInterface.class);
         CountDownLatch latch = new CountDownLatch(1);
         app.run("");
+
+//        Signal.handle(new Signal("INT"), signal -> {
+//            System.out.println("Received signal " + signal.getName());
+//            latch.countDown();
+//        });
+
         latch.await();
+
+
     }
 
     @CrossOrigin(origins = "http://localhost:3000")
     @GetMapping("/")
     public ResponseEntity<String> rchResult(@RequestParam("query") String query, @RequestParam("pageNumber") int pageNumber) {
         System.out.println(query);
+        LocalDateTime now = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS");
+
+        String formattedDateTime = now.format(formatter);
+
+        System.out.println("Current time: " + formattedDateTime);
+
+        long startTime = System.currentTimeMillis();
+
         JSONObject r = new JSONObject();
 
 //        JSONArray response = new JSONArray();
         Map<String, linkAttr> toDisplay = RankerMain.handleQuery(query, pageNumber);
 
 
-
-
-        long startTime = System.currentTimeMillis();
 
         JSONArray toDisp = new JSONArray();
 
@@ -59,22 +77,29 @@ public class SpringBootInterface {
                     temp.put("Snippet", MongoInterface.getSnippet(firstSnippetKey));
                     return temp;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         resultList.forEach(toDisp::put);
-
-        long endTime = System.currentTimeMillis();
-        long elapsedTime = endTime - startTime;
-        System.out.println("Elapsed time: " + elapsedTime + " milliseconds");
-
-
-
 
         if (toDisp.length() != 0)
             MongoInterface.addSuggestion(query);
 
         r.put("results", toDisp);
         r.put("size", toDisp.length());
+        long endTime = System.currentTimeMillis();
+
+        now = LocalDateTime.now();
+        formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS");
+
+        formattedDateTime = now.format(formatter);
+
+        System.out.println("Current time: " + formattedDateTime);
+
+
+        long elapsedTime = endTime - startTime;
+        System.out.println("Elapsed time: " + elapsedTime + " milliseconds");
+
+
         return ResponseEntity.ok(r.toString());
 
     }
@@ -86,7 +111,6 @@ public class SpringBootInterface {
 
         return ResponseEntity.ok(MongoInterface.getSuggestions(query));
     }
-
 
 
 }
